tests/success/var_rename.crema
int a = 5
ing b = a
