tests/fail/var_decl_dup.crema
int a = 32
int a = 33
